<resources>
    <string name="app_name">LocationNotification</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="user_edit_title">TITLE</string>
    <string name="edit_repeate_dates">REPEAT</string>
    <string name="always_repeat_notification">always</string>
    <string name="radio_text_between_dates">Dates:</string>
    <string name="radio_text_always">Always</string>
    <string name="radio_always">Always</string>
    <string name="radio_dates">Dates:</string>
    <string name="edit_dash">   -   </string>
    <string name="AddReminder">Add</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_show_on_map">ShowOnMap</string>
    <string name="action_search">search</string>
    <string name="action_show_pn_map">Show on map</string>
    <string name="edit_user_pick_location_title">LOCATION</string>
    <string name="edit_user_pick_location">Pick location</string>
    <string name="edit_user_start">Start:</string>
    <string name="edit_user_end">End:</string>
    <string name="edit_user_description_title">DESCRIPTION</string>
    <string name="action_remove">remove</string>
    <string name="location_unavailable">(LOCATION_UNAVAILABLE)</string>
    <string name="illegal_date">Illegal date</string>
    <string name="image_uploaded_successfuly">Image uploaded successfully!</string>
    <string name="action_save">Save</string>
    <string name="added_successfully">Added successfully</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="invalid_input">Invalid input!</string>
    <string name="enter_title">Enter title</string>
    <string name="title_error_message">Title is required!</string>
    <string name="location_error_message">Location is required!</string>
    <string name="current_location">Current location</string>
    <string name="SORT_BY_DISTANCE_ERROR">Turn on GPS to sort by distance!</string>
    <string name="cannot_determine_distance">Unavailable</string>
    <string name="active">Active:</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_location">Location</string>
    <string name="drawer_add_reminder">Add Reminder</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="facebook_app_id">1456159818017930</string>
    <string name="action_share">share</string>
    <string name="Distance">Distance:</string>
    <string name="select_remider">Select reminder</string>
    <string name="zero_reminders">There are no reminders to display. Click the (+) button to start adding reminders.</string>
    <string name="delete_reminder">Delete</string>
    <string name="no_reminder_selected">No reminder selected</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="place_details"><![CDATA[&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s]]></string>
    <string name="clicked_user_details">"Clicked: "</string>
    <string name="choose_gallery">Gallery</string>
    <string name="remove_picture">Remove</string>

</resources>
