<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/search_button"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/addReminder"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/AddReminder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_show_on_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="100"
        android:title="@string/action_show_pn_map"
        app:showAsAction="never" />
</menu>
