<ssdl.technion.ac.il.locationnotification.utils_ui.ScrollViewHelper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewHelper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:fillViewport="false"
    tools:context="ssdl.technion.ac.il.locationnotification.UserDetailsFragment">

    <ViewSwitcher
        android:id="@+id/view_switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lr_no_reminder_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        <TextView android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/no_reminder_selected"
            android:text="@string/no_reminder_selected"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lr_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

    <android.support.v7.widget.CardView
        android:id="@+id/card"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_edit_image"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/edit_componets_margin"
                android:adjustViewBounds="true"
                android:maxHeight="200dp"
                android:scaleType="centerCrop"
                android:transitionName="tran2" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/img_edit_image"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/s_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:id="@+id/tv_active"
                    style="@style/Title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@id/s_on_off"
                    android:text="@string/active" />

                <TextView
                    android:id="@+id/tv_edit_title"
                    style="@style/Title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/s_on_off"
                    android:text="@string/user_edit_title" />

                <android.support.v7.internal.widget.TintEditText

                    android:id="@+id/et_edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_edit_title"
                    android:layout_marginBottom="@dimen/edit_componets_margin"
                    android:singleLine="true"
                    android:transitionName="tran3"
                    android:hint="@string/enter_title"/>

                <TextView

                    android:id="@+id/tv_repeat"
                    style="@style/Title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_edit_title"
                    android:text="@string/edit_repeate_dates" />

                <RadioGroup
                    android:id="@+id/radio_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_repeat"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_always"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"

                        android:text="@string/radio_always" />

                    <RadioButton
                        android:id="@+id/radio_dates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/radio_dates" />


                </RadioGroup>

                <TextView
                    android:id="@+id/start"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radio_repeat"
                    android:text="@string/edit_user_start"
                    android:paddingRight="@dimen/datesPadding"/>

                <TextView
                    android:id="@+id/date1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radio_repeat"
                    android:layout_toEndOf="@+id/start"
                    android:paddingRight="@dimen/datesPadding"
                    android:layout_toRightOf="@+id/start" />

                <ImageButton
                    android:id="@+id/btn_date1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radio_repeat"
                    android:layout_toEndOf="@+id/date1"
                    android:layout_toRightOf="@+id/date1"
                    android:background="#00000000"
                    android:enabled="false"
                    android:src="@drawable/calender_icon"
                    android:paddingRight="@dimen/datesPadding"/>

                <TextView
                    android:id="@+id/dash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radio_repeat"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_toEndOf="@+id/btn_date1"
                    android:layout_toRightOf="@+id/btn_date1"
                    android:text="@string/edit_dash"
                    android:paddingRight="@dimen/datesPadding"/>

                <TextView
                    android:id="@+id/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radio_repeat"
                    android:layout_toEndOf="@+id/dash"
                    android:layout_toRightOf="@+id/dash"
                    android:text="@string/edit_user_end"
                    android:paddingRight="@dimen/datesPadding"/>

                <TextView
                    android:id="@+id/date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_below="@+id/radio_repeat"
                    android:layout_toEndOf="@+id/end"
                    android:layout_toRightOf="@+id/end"
                    android:paddingRight="@dimen/datesPadding"

                    />

                <ImageButton
                    android:id="@+id/btn_date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:enabled="false"
                    android:src="@drawable/calender_icon"
                    android:layout_alignTop="@+id/date2"
                    android:layout_toRightOf="@+id/date2"
                    android:layout_toEndOf="@+id/date2"
                    android:paddingRight="@dimen/datesPadding"/>


                <TextView

                    android:id="@+id/tv_location_title"
                    style="@style/Title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_date1"
                    android:layout_marginTop="@dimen/edit_componets_margin"
                    android:text="@string/edit_user_pick_location_title" />
                <RelativeLayout
                    android:id="@+id/location_layout"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/tv_location_title"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/autocomplete_places"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/edit_componets_margin"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/iv_location_ic"
                    android:hint="@string/edit_user_pick_location"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    />
                <ImageView
                    android:id="@+id/iv_location_ic"

                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_ic"

                    android:layout_marginBottom="@dimen/edit_componets_margin"/>
                </RelativeLayout>

                <TextView

                    android:id="@+id/tv_decription_title"
                    style="@style/Title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/location_layout"

                    android:text="@string/edit_user_description_title" />

                <android.support.v7.internal.widget.TintEditText

                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_decription_title"
                    android:layout_marginBottom="@dimen/edit_componets_margin" />

             <!--   <AutoCompleteTextView
                    android:id="@+id/autocomplete_places"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/autocomplete_hint"
                    android:layout_below="@+id/et_description"
                    android:textColor="@android:color/primary_text_light" />-->



            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
        </LinearLayout>
    </ViewSwitcher>


</ssdl.technion.ac.il.locationnotification.utils_ui.ScrollViewHelper>
